# jira-mcp-bridge

./: .gitignore  LICENSE  README.md  pyproject.toml
adapters/acli/: __init__.py  client.py  commands.py  errors.py  parser.py  runner.py
docs/: architecture.md  security.md  setup.md  tools.md
policies/: __init__.py  errors.py  restrictions.py  validation.py
server/: __init__.py  __main__.py  config.py  logging.py  mcp_server.py  tool_handlers.py
tests/: test_commands.py  test_failures.py  test_parser.py  test_validation.py
