[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jira-mcp-bridge"
version = "0.1.0"
description = "Local MCP server bridging AI agents to Jira via Atlassian ACLI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "jira-mcp-bridge contributors" }
]
dependencies = [
  "mcp>=1.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
jira-mcp-bridge = "server.mcp_server:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

